# wordle_warlord

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  history.db
.github/workflows/: audit.yml  ci.yml  release.yml
migrations/: 20260212000001_initial_schema.sql
src/: analysis.rs  args.rs  lib.rs  main.rs  scoring.rs  solver.rs  storage.rs  ui.rs  wordlist.rs
src/db/: games.rs  history.rs  mod.rs  models.rs  solver.rs
src/ui/: AGENTS.md  app.rs  mod.rs  tests.rs  types.rs
src/ui/handlers/: game_handler.rs  history_handler.rs  input_handler.rs  mod.rs  solver_handler.rs
src/ui/history/: mod.rs  parser.rs  solver_types.rs  types.rs
src/ui/rendering/: guesses.rs  input_field.rs  logs.rs  mod.rs  status.rs  suggestions.rs
src/ui/rendering/analysis/: constraints.rs  letters.rs  mod.rs  pool.rs  positions.rs
src/ui/rendering/history/: detail_view.rs  list_view.rs  mod.rs  solver_view.rs  stats_view.rs
