[package]
name = "wordle_grep"
version = "0.1.0"
edition = "2024"

[lib]
name = "wordle_grep"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
anyhow = "1.0"
ratatui = "0.30"
crossterm = "0.29"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
lazy_static = "1.5.0"
once_cell = "1.21.3"
