[package]
name = "wordle_warlord"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "wordle-warlord"
path = "src/main.rs"

[lib]
name = "wordle_warlord"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
anyhow = "1.0"
ratatui = "0.30"
crossterm = "0.29"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
lazy_static = "1.5.0"
once_cell = "1.21.3"
chrono = "0.4.43"

[dev-dependencies]
tempfile = "3.25.0"
